data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_735.wast
;; 6. **Test Description:**    - Implement `br_if` in a sequence of blocks where the condition depends on stack-argument manipulation (push-pop operations). Test branches under specific stack modifications.    - **Constraint Checked:** Correct evaluation of conditions influenced by dynamic stack operations.    - **Test Relation:** Ensures that even with complex operand stack manipulations, conditional branching adheres to correct conditions.

(assert_invalid
  (module (func $br_if_stack_manipulation
    (block (result i32)
      (i32.const 1) ;; Push 1 onto the stack
      (i32.const 2) ;; Push 2 onto the stack
      (i32.add)     ;; Add top two stack items, result is 3
      (br_if 0 (i32.const 0)) ;; Condition is 0, no branch
      (i32.const 4) ;; Push 4 onto the stack
      (i32.mul)     ;; Multiply top two items, result should be 12 if no branch
    )
  ))
  "type mismatch"
)